--- a/src/featurization.ipynb
+++ b/src/featurization.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 2,
    "id": "9636f1eb",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 3,
    "id": "e25e38f2",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "4      1.349100e-08    6.582900e-09      8.672500e-09             0.080645  "
       ]
      },
-     "execution_count": 150,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 4,
    "id": "db1308df",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "id": "29528337",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "id": "d1201cdd",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "id": "68da0f93",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 8,
    "id": "2cf10672",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        "      <td>-0.162760</td>\n",
        "      <td>COCC(CNCC(CF)OC(=O))O</td>\n",
        "      <td>True</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x1ac0c06d0&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x1a6a73e60&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -655,7 +655,7 @@
        "      <td>0.317530</td>\n",
        "      <td>O=C(CCNC(=O)COC(=O))NCCN</td>\n",
        "      <td>True</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x1b02bc4a0&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x1a6a73df0&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -672,7 +672,7 @@
        "      <td>0.529740</td>\n",
        "      <td>NC(=O)C(COC(=O))NC(=O)CCO</td>\n",
        "      <td>True</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x1b02bc3c0&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x1a6a73ed0&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -689,7 +689,7 @@
        "      <td>-0.319160</td>\n",
        "      <td>CC(COC(=O))COC(=O)C(C)(C)CO</td>\n",
        "      <td>True</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x1b02bceb0&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x1a6a73f40&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -706,7 +706,7 @@
        "      <td>0.080645</td>\n",
        "      <td>COC(=O)CC(=O)NC(CO)COC(=O)</td>\n",
        "      <td>True</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x1b02be110&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x1a764c040&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -742,14 +742,14 @@
        "4   COC(=O)CC(=O)NC(CO)COC(=O)      True   \n",
        "\n",
        "                                         mol_obj  \n",
-       "0  <rdkit.Chem.rdchem.Mol object at 0x1ac0c06d0>  \n",
-       "1  <rdkit.Chem.rdchem.Mol object at 0x1b02bc4a0>  \n",
-       "2  <rdkit.Chem.rdchem.Mol object at 0x1b02bc3c0>  \n",
-       "3  <rdkit.Chem.rdchem.Mol object at 0x1b02bceb0>  \n",
-       "4  <rdkit.Chem.rdchem.Mol object at 0x1b02be110>  "
+       "0  <rdkit.Chem.rdchem.Mol object at 0x1a6a73e60>  \n",
+       "1  <rdkit.Chem.rdchem.Mol object at 0x1a6a73df0>  \n",
+       "2  <rdkit.Chem.rdchem.Mol object at 0x1a6a73ed0>  \n",
+       "3  <rdkit.Chem.rdchem.Mol object at 0x1a6a73f40>  \n",
+       "4  <rdkit.Chem.rdchem.Mol object at 0x1a764c040>  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 9,
    "id": "54f6484a",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 10,
    "id": "1519bcf0",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All detected elements: {'S', 'N', 'Si', 'O', 'F', 'P', 'C', 'Cl'}\n"
+      "All detected elements: {'Si', 'Cl', 'N', 'C', 'O', 'P', 'F', 'S'}\n"
      ]
     },
     {
@@ -888,14 +888,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Count_S</th>\n",
-       "      <th>Count_N</th>\n",
        "      <th>Count_Si</th>\n",
-       "      <th>Count_O</th>\n",
-       "      <th>Count_F</th>\n",
-       "      <th>Count_P</th>\n",
-       "      <th>Count_C</th>\n",
        "      <th>Count_Cl</th>\n",
+       "      <th>Count_N</th>\n",
+       "      <th>Count_C</th>\n",
+       "      <th>Count_O</th>\n",
+       "      <th>Count_P</th>\n",
+       "      <th>Count_F</th>\n",
+       "      <th>Count_S</th>\n",
        "      <th>Heteroatom_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -903,36 +903,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>8</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>7</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -941,22 +941,22 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>10</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>10</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>8</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -965,12 +965,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Count_S  Count_N  Count_Si  Count_O  Count_F  Count_P  Count_C  Count_Cl  \\\n",
-       "0        0        1         0        4        1        0        8         0   \n",
-       "1        0        3         0        4        0        0        8         0   \n",
-       "2        0        2         0        5        0        0        7         0   \n",
-       "3        0        0         0        5        0        0       10         0   \n",
-       "4        0        1         0        6        0        0        8         0   \n",
+       "   Count_Si  Count_Cl  Count_N  Count_C  Count_O  Count_P  Count_F  Count_S  \\\n",
+       "0         0         0        1        8        4        0        1        0   \n",
+       "1         0         0        3        8        4        0        0        0   \n",
+       "2         0         0        2        7        5        0        0        0   \n",
+       "3         0         0        0       10        5        0        0        0   \n",
+       "4         0         0        1        8        6        0        0        0   \n",
        "\n",
        "   Heteroatom_count  \n",
        "0                 1  \n",
@@ -980,7 +980,7 @@
        "4                 0  "
       ]
      },
-     "execution_count": 157,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 11,
    "id": "becf2d4c",
    "metadata": {},
    "outputs": [
@@ -1089,7 +1089,7 @@
        "4                        10.0"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 12,
    "id": "0956e462",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
        "4                        5                               5"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 13,
    "id": "6d3225fe",
    "metadata": {},
    "outputs": [
@@ -1363,7 +1363,7 @@
        "4           2              6  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 14,
    "id": "78d566f5",
    "metadata": {},
    "outputs": [
@@ -1500,7 +1500,7 @@
        "4   49.666667   11.077874    4.407540"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 15,
    "id": "077dbb61",
    "metadata": {},
    "outputs": [
@@ -1611,7 +1611,7 @@
        "4       0.314539      -0.468620       -0.076548       0.272433"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 16,
    "id": "a076d20e",
    "metadata": {},
    "outputs": [
@@ -1709,7 +1709,7 @@
        "4  104.758942"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1737,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 17,
    "id": "edceab30",
    "metadata": {},
    "outputs": [
@@ -1817,7 +1817,7 @@
        "4  -1.8004  101.93                  7      0.625000"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 18,
    "id": "41a5f7bf",
    "metadata": {},
    "outputs": [
@@ -1922,7 +1922,7 @@
        "4  7.817155e-10  3.307563e-10  111.155  177.563898"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 19,
    "id": "da9d67a8",
    "metadata": {},
    "outputs": [
@@ -2160,7 +2160,7 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 20,
    "id": "2b8258bd",
    "metadata": {},
    "outputs": [
@@ -2207,7 +2207,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2218,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 21,
    "id": "da1a7625",
    "metadata": {},
    "outputs": [
@@ -2618,7 +2618,7 @@
        "[6137 rows x 37 columns]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2633,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 22,
    "id": "13ebe645",
    "metadata": {},
    "outputs": [
@@ -2723,7 +2723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "055c5090",
    "metadata": {},
    "outputs": [],
